# public_wifi

./: .gitignore  README.md  README.rst  Tr14_data_explorer.ipynb  align_to_catalogs.ipynb  align_tr14_to_gaia.ipynb  align_tr14_to_gaia.py  cat_utils.py  find_sources.py  list_tables.py  pyproject.toml  setup.py.old  todo.org  tr14_headers.py
code/: matplotlibrc
code/strampelli/: Align2Catalog.ipynb  strampelli_df.ipynb
code/utils/: header_utils.py  image_utils.py  ks2_utils.py  shared_utils.py
docs/: README.org  ana_todo.org  conda-public_wifi.yml  instrument_class.org  log-point_source_catalog.org  methods.org  tr14_todo.org
docs/database/: list_of_fields.org  (+12 more)
instruments/: wfc3.cfg
public_wifi/: ana_manager.py  config-ana_template.cfg  config-public_wifi.cfg  config.cfg  config.ini  db_manager.py  starclass.py  subtr_manager.py  table_definitions.cfg  table_templates.py
sphinx/: conf.py  index.rst
src/: star_dashboard_script-drizzled.py  star_dashboard_script.py
tests/: __init__.py  conftest.py  pytest.ini  test-find_sources.py  test_db_manager.py  test_header_utils.py  test_ks2_utils.py  test_shared_utils.py  test_star_dashboard.py  test_starclass.py  test_subtr_utils.py  test_table_utils.py
tr14/: AstroDrizzle.ipynb  KS2_duplicates.ipynb  KS2_inspector.ipynb  KS2_parser.ipynb  align_to_catalogs.ipynb  align_tr14_to_gaia.ipynb  config.ini  find_sources.py  list_tables.py  matplotlibrc  table_definitions.cfg  table_templates.py
utils/: cat_utils.py  header_utils.py  image_utils.py  ks2_utils.py  point_source_utils.py  shared_utils.py  table_utils.py
(+128 files in other folders)
